testsuite/poke.pkl/format-diag-6.pk
/* { dg-do compile } */

format ("%f32x", 1U); /* { dg-error "" } */
